updated index with form

--- a/code/index.html
+++ b/code/index.html
@@ -12,33 +12,30 @@
 <body>
     demo for the test class. new test , pull test.
 
-     <!-- config git for global user for that particular repository -->
-        git config --global user.name 'username'
-        git config --global user.email 'user email address'
-        <!-- end -->
+    <!-- config git for global user for that particular repository -->
+    git config --global user.name 'username' git config --global user.email 'user email address'
+    <!-- end -->
 
 
     push new changes
     <!-- git pull -->
-     <!-- git push -->
+    <!-- git push -->
 
-   <!-- git basic commands --first time -- -->
-   git init <br>
-   git branch -M branch_name <br>
-   git add .  <br>
-   git commit -m 'message' <br>
-   git remote add origin 'remote repo link' <br>
-   git status <br>
-   git push origin main <br>
+    <!-- git basic commands --first time -- -->
+    git init <br> git branch -M branch_name <br> git add . <br> git commit -m 'message' <br> git remote add origin 'remote repo link' <br> git status <br> git push origin main <br>
 
-   <!-- next time just do these steps -->
-    git pull <br>
-    git add . <br>
-    git commit -m 'messase' <br>
-    git push <br>
+    <!-- next time just do these steps -->
+    git pull <br> git add . <br> git commit -m 'messase' <br> git push <br>
 
-<!--   this is a git pull test -->
-   
+    <!--   this is a git pull test -->
+
+
+    <!-- simple form -->
+    <form action="index.php" method="post">
+        <input type="text" name="name" placeholder="name">
+        <input type="text" name="email" placeholder="email">
+        <input type="submit" value="submit">
+
 
 
 </body>
