--- a/code/index.html
+++ b/code/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+
+    <pre>Hello all</pre>
+
     demo for the test class. new test , pull test.
 
     <!-- config git for global user for that particular repository -->
