Remove Javascript code

--- a/code/Anmol.html
+++ b/code/Anmol.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>formvalidation</title>
     <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-    <form name="f1" action="#" onsubmit="validForm()" method="post">
+    <form name="f1" action="#" onsubmit="" method="post">
         <fieldset>
             <legend>Register Form</legend>
         <label for="firstname">FirstName:-</label>
