--- a/code/index.html
+++ b/code/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    demo for the test class. new test
+    demo for the test class. new test goto you folder and enter the following command git init git config --global user.name "Your Name" git config --global user.email "your email"
 </body>
 
 </html>
